Fixed the width issue and spacing issue

--- a/sass/absracts/_base.scss
+++ b/sass/absracts/_base.scss
@@ -8,6 +8,11 @@
     line-height: 1.375rem;
 }
 
+body {
+    width: 100vw;
+    height: 100%;
+}
+
 a:link {
     text-decoration: none;
 }
