--- a/sass/components/_latest.scss
+++ b/sass/components/_latest.scss
@@ -9,7 +9,7 @@
 
 .latest--title {
     display: flex;
-    width: 710px;
+    width: 100%;
     height: 104px;
     margin:auto;
 }
@@ -218,6 +218,10 @@
 }
 
 @media screen and (min-width: $breakpoint-medium) {
+
+    .latest--title {
+        width: 720px;
+    }
 
     .latest--title {
         width: 720px;
