--- a/sass/components/_news.scss
+++ b/sass/components/_news.scss
@@ -62,6 +62,7 @@ label.required:after
 .entry {
     float: left;
     width: 100%;
+    margin-bottom: 15px;
 }
 
 .entry > * {
